kubernetes-manifests/local/3/cloudon.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: cloudon
  name: cloudon-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: bsgon-dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8080
  - host: admin.bsgon-dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8081
  - host: rest-api.bsgon-dev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rest-api
          servicePort: 8000
